Implemented lastroutes for getting scriptexecutions by script name and by unique execution ID
